feat: add tabs permissions in manifest.json

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "activeTab",
     "storage",
-    "identity"
+    "identity",
+    "tabs"
   ],
   "background": {
     "service_worker": "background.bundle.js"
